[fixes #111] Bigger font inside editor.
The font inside the editor div was too small, changed its
size to 14px.

--- a/opendata/static/css/admin.css
+++ b/opendata/static/css/admin.css
@@ -30,3 +30,6 @@ ul{
 h2{
     line-height: 20px!important;
 }
+.bootstrap-wysiwyg{
+    font-size: 14px;
+}
